<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:tint="@color/colorWhite"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_config_user"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:tint="@color/colorWhite"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_config_app"
        android:icon="@drawable/ic_android_black_24dp"
        android:tint="@color/colorWhite"
        android:title="@string/config_app" />

    <item
        android:id="@+id/navigation_import_export"
        android:icon="@drawable/ic_import_export_black_24dp"
        android:tint="@color/colorWhite"
        android:title="@string/title_notifications" />


</menu>
