<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlaceholderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        tools:ignore="MissingConstraints">


        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/input_text_mail" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:passwordToggleEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/input_text_password"/>
        </android.support.design.widget.TextInputLayout>

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/btn_login"
            android:text="iniciar sesión"
            android:layout_gravity="bottom|center"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:textSize="16dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_radius"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:initialCornerAngle="27dp"
            app:spinning_bar_width="4dp"/>

        <TextView android:id="@+id/link_signup"
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/text_new_account"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>